compiler/src/test/resources/golden/errors/ct_div_zero.dawn
const BAD: Int = comptime { 1 / 0 }
