compiler/src/test/resources/golden/errors/ct_div_zero.err
error: comptime: panicked: division by zero
  --> ct_div_zero.dawn:1:31
  |
1 | const BAD: Int = comptime { 1 / 0 }
  |                               ^
